--- a/src/main/resources/templates/cds.html
+++ b/src/main/resources/templates/cds.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">>
-<head>
-    <meta charset="UTF-8"/>
-    <title>Title</title>
-</head>
-<body>
-    <h1>THIS IS THE CD'S SCREEN</h1>
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<head th:replace="fragments :: head"></head>
+<body class="container">
+<h1 th:text="${title}">THIS IS THE CD'S SCREEN</h1>
+
+<nav th:replace="fragments :: navigation"></nav>
 </body>
 </html>
