Added userDao and processUserInfoForm controller

--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -12,11 +12,11 @@
     <input th:field="*{firstName}" />
     <label th:for="lastName">Last Name</label>
     <input th:field="*{lastName}" /><br />
-    <label th:for="address"></label>
+    <label th:for="address">Address</label>
     <input th:field="*{address}" /><br />
-    <label th:for="city"></label>
+    <label th:for="city">City</label>
     <input th:field="*{city}" /><br />
-    <label th:for="state"></label>
+    <label th:for="state">State</label>
     <select th:field="state">
         <option th:value="ALABAMA">AL</option>
         <option th:value="ALASKA">AK</option>
